--- a/Orderly.Client/wwwroot/index.html
+++ b/Orderly.Client/wwwroot/index.html
@@ -42,6 +42,10 @@
     <!-- Bootstrap -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
+    <!-- Typed -->
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </body>
 </html>
 
