--- a/Orderly.Client/wwwroot/index.html
+++ b/Orderly.Client/wwwroot/index.html
@@ -1,7 +1,7 @@
 ﻿
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -12,7 +12,9 @@
 
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <link href="css/site.css" rel="stylesheet" />
+    <!-- Compiled Tailwind + DaisyUI CSS -->
+
+    <link href="css/output.css" rel="stylesheet" />
 
     <!-- Font -->
 
@@ -22,6 +24,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script src="js/typewriter.js"></script>
+    <script src="js/fadeIn.js"></script>
 
     <base href="/" />
 </head>
