Redesigned dashboard layout and dashboard overview

--- a/Orderly.Client/wwwroot/index.html
+++ b/Orderly.Client/wwwroot/index.html
@@ -14,7 +14,7 @@
 
     <!-- Compiled Tailwind + DaisyUI CSS -->
 
-    <link href="css/output.css" rel="stylesheet" />
+    <link href="/css/output.css" rel="stylesheet" />
 
     <!-- Font -->
 
@@ -28,8 +28,9 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <script src="js/typewriter.js"></script>
-    <script src="js/fadeIn.js"></script>
+    <script src="/js/typewriter.js"></script>
+    <script src="/js/fadeIn.js"></script>
+    <script src="/js/windowInterop.js"></script>
 
     <base href="/" />
 </head>
