Disabled search engine crawling

--- a/Orderly.Client/wwwroot/index.html
+++ b/Orderly.Client/wwwroot/index.html
@@ -12,6 +12,10 @@
 
     <link rel="icon" type="image/png" href="favicon.png" />
 
+    <!-- No search egnine crawling for portfolio app -->
+
+    <meta name="robots" content="noindex,nofollow" />
+
     <!-- Compiled Tailwind + DaisyUI CSS -->
 
     <link href="/css/output.css" rel="stylesheet" />
